2007-07-02  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/Makefile.am, src/Makefile.am, src/Emakefile.in,
	ebin/Makefile.am: Updated Makefiles to include the new modules.

2007-07-01  Christophe Romain  <christophe.romain@process-one.net>

	* include/xmpp.hrl, src/network/exmpp_callbacks.erl,
	src/network/exmpp_tcp.erl: Add network modules for direct client use.

2007-07-01  Mickael Remond  <mremond@process-one.net>

	* src/core/exmpp_jid.erl: Make jid can generate random resource when
	asked. A new is_jid function has been added.

2007-06-26  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Branch 0.7.

2007-06-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* c_src/Makefile.am: Moved some targets around to reorder them more
	logically.

	* Makefile.unix, c_src/Makefile.unix, src/Makefile.unix,
	ebin/Makefile.unix: Added Makefiles to provide an alternate build
	procedure. It's intended for Unix plateforms where the autotools are
	not as common as under Linux/*BSD. Note that this method doesn't have
	any option to disable the compatibility layer or to build the
	documentation yet. They require GNU make(1).

2007-06-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/server/exmpp_server_sasl.erl (next_step),
	src/server/exmpp_server_session.erl (want_establishment),
	src/server/exmpp_server_binding.erl (wished_resource): Return an error
	if the given stanza is unexpected. If the argument isn't an
	#xmlnselement{}, it still raises a function clause EXIT.

	* src/server/exmpp_server_binding.erl (error): Add the
	`not-authorized' case.

	* src/core/exmpp_stream.erl, src/server/exmpp_server_stream.erl,
	src/client/exmpp_client_stream.erl: Add helpers to access common
	attributes.

	* src/core/exmpp_xml.erl: Add functions to prepend one or more
	children to a given element's children.

	* m4/ax_compare_version.m4: New M4 macro to compare version numbers in
	a configure script.
