@@ -8,12 +8,29 @@
         exmpp,
         exmpp_sup,
         exmpp_internals,
+        exmpp_jid,
+        exmpp_jlib,
+        exmpp_stream,
+        exmpp_stringprep,
         exmpp_xml,
         exmpp_xmlstream,
-        exmpp_jid,
-        exmpp_factory,
-        exmpp_jlib,
-        exmpp_client_pubsub@COMPAT_MODULES_START@
+        exmpp_callbacks,
+        exmpp_tcp,
+        exmpp_client_binding,
+        exmpp_client_compression,
+        exmpp_client_legacy_auth,
+        exmpp_client_pubsub,
+        exmpp_client_sasl,
+        exmpp_client_session,
+        exmpp_client_stream,
+        exmpp_client_tls,
+        exmpp_server_binding,
+        exmpp_server_compression,
+        exmpp_server_legacy_auth,
+        exmpp_server_sasl,
+        exmpp_server_session,
+        exmpp_server_stream,
+        exmpp_server_tls@COMPAT_MODULES_START@
         @COMPAT_MODULES@ejabberd_zlib,
         @COMPAT_MODULES@iconv,
         @COMPAT_MODULES@jlib,
